# object_manipulation

household_objects_database_msgs/: CMakeLists.txt  package.xml
object_manipulation/: CMakeLists.txt  package.xml
object_manipulation_msgs/: CMakeLists.txt  package.xml
